<resources>
    <string name="app_name">Personalized OBD Scan</string>
    <string name="tab_1_text">Summary</string>
    <string name="tab_2_text">Statistic</string>
    <string name="tab_1_text_fuel">Consumption</string>
    <string name="tab_2_text_fuel">Cost</string>
    <string name="dummy_email">Email</string>
    <string name="dummy_name">Name</string>
    <string name="dummy_password">Password</string>
    <string name="dummy_age">Age</string>
    <string-array name="cars_array">
        <item>Nissan Juke 1.5L CVT 2015</item>
    </string-array>
    <string name="registration_successful">Registration Successful!</string>
    <string name="unknown_error">Unknown error Occurred</string>
    <string name="validation_error">Please enter a valid input data</string>
    <string name="tv_lorem_ipsum">No Data Available</string>
    <string name="tv_please_register">Belum ada akun? <b>Register</b></string>
    <string name="tv_bar_chart_pad_reduction">Brake pad average reduction of life expectancy</string>
    <string name="tv_bar_chart_pad_remaining_life">Brake pad remaining life expectancy</string>
    <string name="tv_bar_chart_disc_reduction">Brake disc average reduction of life expectancy</string>
    <string name="tv_bar_chart_disc_remaining_life">Brake disc remaining life expectancy</string>
    <string name="tv_bar_chart_pad_reduction_label">Brake pad average reduction of life expectancy (KM)</string>
    <string name="tv_bar_chart_pad_remaining_life_label">Brake pad remaining life expectancy (KM)</string>
    <string name="tv_bar_chart_disc_reduction_label">Brake disc average reduction of life expectancy (KM)</string>
    <string name="tv_bar_chart_disc_remaining_life_label">Brake disc remaining life expectancy (KM)</string>
    <string name="tv_db_condition_label">Driving Behaviour Condition</string>
    <string name="tv_line_chart_fuel_cons_rt">Realtime Fuel Consumption</string>
    <string name="tv_line_chart_fuel_cons">Average Fuel Consumption (L) every trip</string>
    <string name="tv_line_chart_rpm_rt">Realtime RPM</string>
    <string name="tv_line_chart_speed_rt">Realtime Speed</string>
    <string name="tv_line_chart_accel_pos_rt">Realtime Accel Pos</string>
    <string name="tv_line_chart_fuel_cost">Average price (Rp) per second every Trip</string>
    <string name="tv_line_chart_trip_cost">Price (Rp) every Trip</string>
    <string name="tv_line_chart_co2_persec">CO2 Emission per second</string>
    <string name="tv_line_chart_co2_trip">Average CO2 per trip</string>
    <string name="tv_total_co2_emitted">Total CO2 you emitted</string>
    <string name="tv_air_filter_date_label">Kondisi Air Filter pada Tanggal</string>
    <string name="tv_ml_predict_value_label">Nilai Prediksi ML</string>
    <string name="tv_value_difference_label">Rentang Prediksi</string>
    <string name="tv_air_filter_change_estimation_month_label">Estimasi Sisa Waktu Penggantian</string>
    <string name="tv_air_filter_change_estimation_km_label">Estimasi Sisa Jarak Penggantian</string>
    <string name="tv_air_filter_suggestion_label">Saran Perawatan</string>
    <string name="tv_oil_change_estimation_month_label">Estimasi Sisa Waktu Penggantian Oli</string>
    <string name="tv_oil_change_estimation_km_label">Estimasi Sisa Jarak Penggantian Oli</string>
    <string name="tv_accu_change_label">Battery Status</string>
    <string name="tv_line_chart_accu_volt">Initial Battery Voltage</string>
    <string name="tv_accu_suggestion_normal">Good</string>
    <string name="tv_accu_suggestion_replace">Replace</string>
    <string name="tv_accu_suggestion_charge">Change</string>
    <string name="tv_braking_within_range_label">Jumlah Pengereman Pada Batas Normal</string>
    <string name="tv_braking_above_range_label">Jumlah Pengereman Diatas Normal</string>
    <string name="tv_braking_below_range_label">Jumlah Pengereman Dibawah Normal</string>
    <string name="tv_brake_pad_maintenance_label">Periode Pengecekan Kampas Rem</string>
    <string name="tv_brake_pad_replacement_label">Periode Penggantian Kampas Rem</string>
    <string name="tv_brake_disc_maintenance_label">Periode Pengecekan Cakram Rem</string>
    <string name="tv_brake_disc_replacement_label">Periode Penggantian Cakram Rem</string>
    <string name="tv_braking_summary_suggestion_label">Pemberitahuan</string>
    <string name="bt_braking_summary_suggestion">Cek Jurnal Tentang Pengereman</string>
    <string name="tv_air_filter_suggestion_normal">Air Filter dalam kondisi normal, tidak ada tindakan yang perlu dilakukan.</string>
    <string name="tv_air_filter_suggestion_damaged">Silahkan cek dan bersihkan Air Filter, apabila perlu, silahkan ganti Air Filter dengan yang baru.</string>
    <string name="tv_braking_suggestion_normal">Sistem pengereman dalam kondisi optimal.</string>
    <string name="tv_braking_suggestion_above_range">Laju pengausan kampas rem semakin tinggi dan berpotensi membutuhkan penggantian lebih cepat.</string>
    <string name="tv_braking_suggestion_below_range">Performa koefisien gesek kampas rem tidak optimal dan berpotensi berbahaya.</string>
    <string name="tv_bar_chart_air_filter_distance_reduction">Pengurangan sisa jarak penggantian</string>
    <string name="tv_bar_chart_air_filter_duration_reduction">Pengurangan sisa waktu penggantian</string>
    <string name="tv_bar_chart_air_filter_distance_reduction_label">Pengurangan sisa jarak penggantian (KM)</string>
    <string name="tv_bar_chart_air_filter_duration_reduction_label">Pengurangan sisa waktu penggantian (bulan)</string>
    <string name="tv_component">Komponen</string>
    <string name="tv_damage">Kerusakan</string>
    <string name="tv_findings">Penemuan</string>
    <string name="tv_causes">Penyebab</string>
    <string name="tv_impacts">Akibat</string>
    <string name="tv_action">Tindakan Korektif</string>
    <string name="tv_prevention">Tindakan Pencegahan</string>
    <string name="journal_1_1_damage">Uneven wear</string>
    <string name="journal_1_1_component">Kampas Rem</string>
    <string name="journal_1_1_findings">Terdapat tingkat aus yang berbeda Kampasa salah satu sisi Kampas Rem Kampasa penghubung dengan Kaliper Rem</string>
    <string name="journal_1_1_causes">Terdapat kebocoran Kampasa area guide pin sehingga udara lembab/butiran air di udara dapat penetrasi, dapat berakhir dengan korosi</string>
    <string name="journal_1_1_impacts">Kaliper Rem tidak bisa bergeser kembali ke posisi awal setelah pedal rem dilepas sehingga bagian luar dari Kampas Rem bergesekan dengan Cakram Rem. Hal tersebut meningkatkan aus Kampasa sisi luar Kampas Rem.</string>
    <string name="journal_1_1_action">Pilot bearing dan bushes harus diperbarui/diganti</string>
    <string name="journal_1_1_prevention">Melakukan pengecekan berkala terhadap <i>seals</i> dari <i>pilot bearing</i>, melakukan penggantian apabila sudah tidak layak</string>
    <string name="journal_1_2_damage">Edge pitting</string>
    <string name="journal_1_2_component">Kampas Rem</string>
    <string name="journal_1_2_findings">Kampas Rem memiliki ketebalan setengah dari kondisi baru dan memiliki aus yang merata serta adanya lapisan karbon Kampasa permukaan karena efek gesekan (merupakan pertanda rem berfungsi dengan baik), namun terdapat korosi Kampasa pinggiran</string>
    <string name="journal_1_2_causes">Air yang dapat penetrasi ke Kampas Rem Kampasa area clamping clip, menyebabkan korosi sehingga area yang korosi membengkak dan kehilangan adhesi terhadap lapisan Kampas Rem dan mengelupas akibat proses pengereman</string>
    <string name="journal_1_2_impacts">Pitting akan meluas sehingga area yang efektif dalam proses pengereman berkurang dan membuat efektivitas pengereman berkurang secara gradual</string>
    <string name="journal_1_2_action">Jika edge pitting dan retak sampai Kampasa sekitar 10% dari permukaan Kampas Rem, maka itu adalah aus yang normal. Area adhesi Kampas Rem (ketebalan Kampas Rem sampai 2 mm diatas Plat Kampas Rem) tidak diperbolehkan adanya pitting atau retak.</string>
    <string name="journal_1_2_prevention">Melakukan pengecekan rutin berdasarkan rekomendasi <i>service and maintenance guide book.</i></string>
    <string name="journal_1_3_damage">Crack formation (due to high thermal load)</string>
    <string name="journal_1_3_component">Kampas Rem</string>
    <string name="journal_1_3_findings">Beberapa retak terbentuk dan terlihat Kampasa permukaan meskipun kedalamannya hanya sedikit, namun beberapa retak dapat menyatu dan memanjang disepanjang Kampas Rem. Hanya sedikit lapisan karbon yang terbentuk akibat proses pengereman</string>
    <string name="journal_1_3_causes">Pengemudi sering kali melakukan pengereman berulang kali dalam waktu dekat secara kasar (pedal rem ditekan terlalu dalam) sehingga permukaan memiliki temperatur yang sangat tinggi tetapi karena hanya singkat (sebentar) panas tidak penetrasi lebih dalam ke Kampas Rem. Temperatur tinggi yang hanya sebentar dan berulang kali ini menyebabkan agen pengikat menguap dan heat retak terjadi.</string>
    <string name="journal_1_3_impacts">Permukaan yang retak akan terkikis relatif lebih cepat ketika kendaraan berjalan, maka batas aus akan lebih cepat tercapai.</string>
    <string name="journal_1_3_action">Kampas Rem harus diperbarui/diganti apabila retak sudah sepanjang permukaan. Jika belum, maka masih dapat digunakan.</string>
    <string name="journal_1_3_prevention">Mengemudi dengan hati-hati dan tidak melakukan pengereman keras berulang kali dalam waktu dekat.</string>
    <string name="journal_1_4_damage">Wear limit</string>
    <string name="journal_1_4_component">Kampas Rem</string>
    <string name="journal_1_4_findings">Permukaan gesek dari Kampas Rem telah mencapai batasannya, biasanya 2 mm.</string>
    <string name="journal_1_4_causes">Kampas Rem telah mencapai umur pakainya dan memiliki ketebalan sampai ke area adhesi (ketebalan 2 mm)</string>
    <string name="journal_1_4_impacts">Jika Kampas Rem tidak diperbarui/diganti secepatnya, ada risiko sisa dari Kampas Rem akan kehilangan adhesi sepenuhnya Kampasa proses pengereman dan pengereman akan gagal.</string>
    <string name="journal_1_4_action">Kampas Rem harus diperbarui/diganti.</string>
    <string name="journal_1_4_prevention">Melakukan pengecekan rutin berdasarkan rekomendasi <i>service and maintenance guide book.</i></string>
    <string name="journal_1_5_damage">Disregarding wear limit</string>
    <string name="journal_1_5_component">Kampas Rem</string>
    <string name="journal_1_5_findings">Tidak adanya permukaan dari Kampas Rem yang tersisa</string>
    <string name="journal_1_5_causes">Batasan dari aus sudah dilewati sehingga gesekan langsung antara Cakram Rem dan Plat dari Kampas Rem mengakibatkan temperatur mencapai titik yang dapat mengubah bentuk metal.</string>
    <string name="journal_1_5_impacts">Jika batasan Kampasa Kampas Rem sudah dilewati dan permukaan Kampas sudah habis, kerusakan akibat gesekan tidak akan bisa diperbaiki kembali. Bahkan, bisa merusak Kaliper Rem dan kegagalan total sistem pengereman dapat terjadi.</string>
    <string name="journal_1_5_action">Kampas Rem harus diperbarui/diganti.</string>
    <string name="journal_1_5_prevention">Melakukan pengecekan rutin berdasarkan rekomendasi <i>service and maintenance guide book.</i></string>
    <string name="journal_1_6_damage">Cracking due to thermal overloading</string>
    <string name="journal_1_6_component">Cakram Rem</string>
    <string name="journal_1_6_findings">Terdapat retak Kampasa Cakram Rem berventilasi (dapat berlaku walaupun hanya sedikit aus Kampasa Cakram Rem) dan retak akibat panas</string>
    <string name="journal_1_6_causes">Beban termal yang berubah-ubah memberikan <i>internal stress</i> sehingga retak terbentuk. Beban termal disebabkan pengereman keras yang dilakukan berulang kali.</string>
</resources>